--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="titulo">
         <img src="./galeria/galeria11 (2).jpg" alt="photo the grass lawn">
     </div>
-    <div class="span">Miguel Lawn Srvices</div>
+    <div class="span">Miguel Lawn Services</div>
     <div class="span"><a href="tel:+2408838479">(240)883-8479</a></div>
 
     <section id="projects">
