--- a/photos.html
+++ b/photos.html
@@ -23,7 +23,7 @@
 
 
     </nav>
-    <div class="span">Miguel Lawn Srvices</div>
+    <div class="span">Miguel Lawn Services</div>
     <div class="span"><a href="tel:+2408838479">(240)883-8479</a></div>
     <div id="galeria" class="galeria">
         <div class="galeria__item">
