--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
     <nav class="nav justify-left" id="nav">
-        <a class="nav-link active" href="./index.html" target="_top">Home</a>
+
+        <a class="nav-link active" href="https://lagunalawnservice.com/" target="_top">Home</a>
 
         <a class="nav-link" href="photos.html" target="_top">Photos</a>
     </nav>
