--- a/photos.html
+++ b/photos.html
@@ -19,7 +19,7 @@
 
 <body>
     <nav class="nav justify-left" id="nav">
-        <a class="nav-link active" href="./index.html" target="_top">Home</a>
+        <a class="nav-link active" href="./index" target="_top">Home</a>
 
 
     </nav>
