--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <a class="nav-link active" href="https://lagunalawnservice.com/" target="_top">Home</a>
 
-        <a class="nav-link" href="photos" target="_top">Photos</a>
+        <a class="nav-link" href="/photos" target="_top">Photos</a>
     </nav>
     <div id="titulo">
         <img src="./galeria/galeria11 (2).jpg" alt="photo the grass lawn">
