--- a/photos.html
+++ b/photos.html
@@ -4,6 +4,9 @@
 <head>
     <title>Miguel Laguna</title>
     <!-- Required meta tags -->
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9205886382677250"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
