--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="nav justify-left" id="nav">
 
-        <a class="nav-link active" href="./index.html" target="_top">Home</a>
+        <a class="nav-link active" href="#" target="_top">Home</a>
 
         <a class="nav-link" href="/photos" target="_top">Photos</a>
     </nav>
