--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="shortcut icon" href="https://img.icons8.com/emoji/28/null/maple-leaf-emoji.png" type="image/x-icon">
     <title>Laguna-Grass</title>
 </head>
 
 <body>
-    <nav class="nav justify-left" id="nav">
-
-        <a class="nav-link active" href="#" target="_top">Home</a>
-
-        <a class="nav-link" href="/photos" target="_top">Photos</a>
+    <nav class="navbar" id="nav">
+        <ul>
+            <li><a href="#" target="_top">Home</a></li>
+            <li><a href="/photos" target="_top">Photos</a></li>
+        </ul>
     </nav>
     <div id="titulo">
         <img src="./galeria/galeria11 (2).jpg" alt="photo the grass lawn">
@@ -113,7 +114,7 @@
     <footer class="pie">
         <h1>MIGUEL LAWN SERVICES</h1>
         <h3 class="pie1">THE BEST PRICES IN THE AREA</h3>
-        <p>&copy;2022 Rights.reserved.MiguelLawnServices.</p>
+        <p>&copy;2023 Rights.reserved.MiguelLaguna.</p>
 
     </footer>
 
