--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <title>Miguel Laguna</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
@@ -12,8 +12,11 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href=" photos.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/emoji/28/null/maple-leaf-emoji.png" type="image/x-icon">
+    <title>Miguel Laguna</title>
 </head>
 
 <body>
