--- a/photos.html
+++ b/photos.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href=" photos.css">
     <link rel="shortcut icon" href="https://img.icons8.com/emoji/28/null/maple-leaf-emoji.png" type="image/x-icon">
-    <title>Miguel Laguna</title>
+    <title>Laguna-photos</title>
 </head>
 
 <body>
