--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./fotos2.css">
     <link rel="shortcut icon" href="https://img.icons8.com/emoji/28/null/maple-leaf-emoji.png" type="image/x-icon">
     <title>Laguna-Grass</title>
 </head>
@@ -111,6 +112,188 @@
             </div>
         </div>
     </section>
+    <main class="content">
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/cortes2.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria3.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/cortes2.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria3.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria4.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria5.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria6.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria7.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria8.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria9.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria10.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria11.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria12.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria13.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria14.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria12.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/cortes2.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria3.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/cortes2.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria3.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria4.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria5.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria6.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria7.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria8.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria9.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria10.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria11.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria12.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria13.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria14.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria12.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/cortes2.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria3.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/cortes2.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria1.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria3.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria4.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria5.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria6.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria7.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria8.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria9.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria10.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria11.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria12.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria13.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria14.jpg" alt="">
+        </div>
+        <div class="fotos">
+            <img src="./galeria/galeria12.jpg" alt="">
+        </div>
+    </main>
     <footer class="pie">
         <h1>MIGUEL LAWN SERVICES</h1>
         <h3 class="pie1">THE BEST PRICES IN THE AREA</h3>
