--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Projects<span>.Laguna</span></h1>
+                <span class="section-title">Projects<span>.Laguna</span></span>
             </div>
             <div class="all-projects">
                 <div class="project-item">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h2>Mulch</h2>
+                        <span>Mulch</span>
                         <h2>Refreshes you Garden</h2>
                         <p> Improvement in your garden Do you want your garden to be Healthy? Mulch can be used to help
                             give color to your garden and keep your plants healthy. Usually mulch is placed near the
