--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
         <ul>
             <li><a href="#" target="_top">Home</a></li>
             <li><a href="/photos" target="_top">Photos</a></li>
+            <li><a href="tel:12408838479" class="piez">Prices</a></li>
         </ul>
     </nav>
+     
     <div id="titulo">
         <img src="./galeria/galeria11 (2).jpg" alt="photo the grass lawn">
     </div>
+ 
     <div class="span">Miguel Lawn Services</div>
     <div class="span"><a href="tel:+2408838479">(240)883-8479</a></div>
 
@@ -297,20 +300,20 @@
     <footer class="pie">
         <h1>MIGUEL LAWN SERVICES</h1>
         <h3 class="pie1">THE BEST PRICES IN THE AREA</h3>
-        <p>&copy;2023 Rights.reserved.MiguelLaguna.</p>
+        <p>&copy; <em class="fecha"></em> Rights.reserved.MiguelLaguna.</p>
 
     </footer>
-
+    <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
-<script src="app.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+ 
 
 </html>
