--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 <body>
     <nav class="navbar" id="nav">
         <ul>
-            <li><a href="#" target="_top">Home</a></li>
-            <li><a href="/photos" target="_top">Photos</a></li>
-            <li><a href="tel:12408838479" class="piez">Prices</a></li>
+            <li><a class="links" href="#" target="_top">Home</a></li>
+            <li><a class="links" href="/photos" target="_top">Photos</a></li>
+            <li><a class="links" href="tel:12408838479" class="piez">Prices</a></li>
         </ul>
     </nav>
-     
+<div class="scroll"></div>     
     <div id="titulo">
         <img src="./galeria/galeria11 (2).jpg" alt="photo the grass lawn">
     </div>
