--- a/photos.html
+++ b/photos.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="nav justify-left" id="nav">
+    <nav class="nav " id="nav">
         <a class="nav-link active" href="./index" target="_top">Home</a>
     </nav>
     <div class="span">Miguel Lawn Services</div>
