--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a class="links" href="#" target="_top">Home</a></li>
             <li><a class="links" href="/photos" target="_top">Photos</a></li>
-            <li><a class="links" href="tel:12408838479" class="piez">Prices</a></li>
+            <li><a class="links" href="https://lagunalawnservice.com/prices" class="piez">Prices</a></li>
         </ul>
     </nav>
 <div class="scroll"></div>     
