--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
  
     <div class="span">Miguel Lawn Services</div>
-    <div class="span"><a href="tel:+2408838479">(240)883-8479</a></div>
+    <div class="span"><a href="tel:2408838479">(240)883-8479</a></div>
 
     <section id="projects">
         <div class="projects container">
