--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                 </div>
             </div>
         </div>
+        <section class="customer"><h2>work done</h2></section>
     </section>
     <main class="content">
         <div class="fotos">
