--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <li><a class="links" href="#" target="_top">Home</a></li>
             <li><a class="links" href="/photos" target="_top">Photos</a></li>
             <li><a class="links" href="https://lagunalawnservice.com/prices" class="piez">Prices</a></li>
+            <li> <a href="https://www.youtube.com/channel/UC8Q51GWY9f5YsIQyLwNMfbw" target="_blank"  onclick="event.preventDefault();
+            if (confirm('Do you want to subscribe to my YouTube channel?')) {
+                window.open(this.href, '_blank');
+            }" class="boton">Subscribe</a></li>
         </ul>
     </nav>
 <div class="scroll"></div>     
